--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongodb": "^6.15.0",
-        "mongoose": "^7.0.0"
+        "pg": "^8.16.2",
+        "sequelize": "^6.37.7"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
