--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - app-network
     deploy:
-      replicas: 1
+      replicas: 3
       restart_policy:
         condition: on-failure
 
@@ -17,22 +17,47 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - PORT=5000
       - NODE_ENV=production
-      - MONGO_URI=mongodb://mongodb:27017/cafeAroma 
+      - PORT=5000
+      - POSTGRES_HOST=postgres
+      - POSTGRES_DB=cafeAroma
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=password123
     networks:
       - app-network
+    depends_on:
+      - postgres
     deploy:
-      replicas: 1
+      replicas: 2
       restart_policy:
         condition: on-failure
 
-  mongodb:
-    image: mongo:latest
+  # mongodb:
+  #   image: mongo:4.4-focal
+  #   ports:
+  #     - "27017:27017"
+  #   volumes:
+  #     - mongo-data:/data/db
+  #   networks:
+  #     - app-network
+  #   deploy:
+  #     replicas: 1
+  #     restart_policy:
+  #       condition: on-failure
+  #     placement:
+  #       constraints:
+  #         - node.role == manager
+
+  database:
+    image: postgres:13-alpine
+    environment:
+      POSTGRES_DB: cafeAroma
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password123
     ports:
-      - "27017:27017"
+      - "5432:5432"
     volumes:
-      - mongo-data:/data/db
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
     deploy:
@@ -51,3 +76,4 @@ networks:
 volumes:
   mongo-data:
     driver: local
+  postgres_data:
