--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=5000
-      - POSTGRES_HOST=postgres
+      - POSTGRES_HOST=cafe-aroma_database
       - POSTGRES_DB=cafeAroma
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=password123
