--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,20 +1,38 @@
 server {
     listen 80;
     server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
-
-    # Proxy para el backend
+    
+    # Servir archivos estáticos del frontend
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
+    
+    # Proxy para el API backend
     location /api/ {
-        proxy_pass http://backend:5000;
+        #CAMBIAR: De 'backend' a 'cafe-aroma_backend'
+        proxy_pass http://cafe-aroma_backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Headers para CORS
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        
+        # Manejar OPTIONS requests
+        if ($request_method = OPTIONS) {
+            return 200;
+        }
     }
-
-    # Servir archivos estáticos
-    location / {
-        try_files $uri $uri/ /index.html;
+    
+    # Configuración adicional
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
